<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewWPName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listrow_flightplan_wpname_label" />

        <EditText
            android:id="@+id/editTextWPName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/listrow_flightplan_wpname_hint" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewWPNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listrow_flightplan_wpnumber_label" />

        <EditText
            android:id="@+id/editTextWPNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/listrow_flightplan_wpnumber_hint"
            android:inputType="number" >

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listrow_flightplan_latitude_label" />

        <EditText
            android:id="@+id/editTextLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/listrow_flightplan_latitude_hint" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listrow_flightplan_longitude_label" />

        <EditText
            android:id="@+id/editLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/listrow_flightplan_longitude_hint" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewAltitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listrow_flightplan_altitude_label" />

        <EditText
            android:id="@+id/editTextAltitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/listrow_flightplan_altitude_hint"
            android:inputType="number" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewDeltaTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listrow_flightplan_deltatime_label" />

        <EditText
            android:id="@+id/editTextDeltaTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/listrow_flightplan_deltatime_hint" />

    </TableRow>

</TableLayout>
