<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CommandFlightActivity" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_command_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewFPNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_general_fpname_display" />

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_command_button_return" />

    <Button
        android:id="@+id/buttonTakeoff"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonReturn"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_command_button_takeoff" />

    <Button
        android:id="@+id/buttonFlySelected"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonTakeoff"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_command_button_fly_selected" />

    <TextView
        android:id="@+id/textViewWeatherLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewFPNameDisplay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/activity_command_weather_label" />

    <TextView
        android:id="@+id/textViewWeatherMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWeatherLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_command_weather_message" />

    <TextView
        android:id="@+id/textViewDeviationsMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWeatherMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:text="@string/activity_command_deviations_message" />

    <TextView
        android:id="@+id/textViewDeviationsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewDeviationsMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/activity_command_deviations_label" />

</RelativeLayout>
