<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditFlightPlanActivity" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_editflightplan_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextFPName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewTitle"
        android:ems="10"
        android:hint="@string/activity_editflightplan_fpname_hint"
        android:maxLines="1"
        android:text="@string/activity_general_fpname_display" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewFPNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextFPName"
        android:layout_alignParentLeft="true"
        android:text="@string/activity_general_fpname_label" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/activity_editflightplan_button_submit" />

    <ListView
        android:id="@+id/listViewFlightPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSubmit"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextFPName" >

    </ListView>

</RelativeLayout>
